Fix: LNK4099, /Zi to /Z7

--- a/Musa.Runtime/Musa.Runtime.props
+++ b/Musa.Runtime/Musa.Runtime.props
@@ -46,6 +46,7 @@
       <ConformanceMode>false</ConformanceMode>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
       <!--
       <ObjectFileName>$(IntDir)anyname\%(RelativeDir)%(FileName).obj</ObjectFileName>
       -->
