--- a/Musa.Runtime/Musa.Runtime.CRT.vcxproj.filters
+++ b/Musa.Runtime/Musa.Runtime.CRT.vcxproj.filters
@@ -172,6 +172,9 @@
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\std_type_info_static.cpp">
       <Filter>crt\vcstartup</Filter>
     </ClCompile>
+    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\thread_safe_statics.cpp">
+      <Filter>crt\vcstartup</Filter>
+    </ClCompile>
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\throw_bad_alloc.cpp">
       <Filter>crt\vcstartup</Filter>
     </ClCompile>
