Fixed: #6, Adding '/Zc:threadSafeInit-' temporarily solves the error

--- a/Musa.Runtime.NuGet/Musa.Runtime.Config.props
+++ b/Musa.Runtime.NuGet/Musa.Runtime.Config.props
@@ -54,6 +54,7 @@
     <ClCompile>
       <!-- C++ Exception Mode, /EHa -->
       <ExceptionHandling>Async</ExceptionHandling>
+      <AdditionalOptions>/Zc:threadSafeInit- %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
 
