--- a/Musa.Runtime/Musa.Runtime.CRT.vcxproj.filters
+++ b/Musa.Runtime/Musa.Runtime.CRT.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClInclude Include="kext\kallocator.h">
       <Filter>kext</Filter>
     </ClInclude>
+    <ClInclude Include="kext\thread_local.h">
+      <Filter>kext</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="universal.cpp" />
@@ -172,22 +175,13 @@
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\std_type_info_static.cpp">
       <Filter>crt\vcstartup</Filter>
     </ClCompile>
-    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\thread_safe_statics.cpp">
-      <Filter>crt\vcstartup</Filter>
-    </ClCompile>
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\throw_bad_alloc.cpp">
       <Filter>crt\vcstartup</Filter>
     </ClCompile>
-    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\tncleanup.cpp">
-      <Filter>crt\vcstartup</Filter>
-    </ClCompile>
-    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\tlsdtor.cpp">
-      <Filter>crt\vcstartup</Filter>
-    </ClCompile>
-    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\tlsdyn.cpp">
-      <Filter>crt\vcstartup</Filter>
-    </ClCompile>
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\tlssup.cpp">
+      <Filter>crt\vcstartup</Filter>
+    </ClCompile>
+    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\tncleanup.cpp">
       <Filter>crt\vcstartup</Filter>
     </ClCompile>
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\ucrt_stubs.cpp">
@@ -212,6 +206,15 @@
       <Filter>crt\vcstartup</Filter>
     </ClCompile>
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir_Overlay)\crt\vcruntime\initializers.cpp">
+      <Filter>crt\vcstartup</Filter>
+    </ClCompile>
+    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir_Overlay)\crt\vcruntime\thread_safe_statics.cpp">
+      <Filter>crt\vcstartup</Filter>
+    </ClCompile>
+    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir_Overlay)\crt\vcruntime\tlsdtor.cpp">
+      <Filter>crt\vcstartup</Filter>
+    </ClCompile>
+    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir_Overlay)\crt\vcruntime\tlsdyn.cpp">
       <Filter>crt\vcstartup</Filter>
     </ClCompile>
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir_Overlay)\crt\vcruntime\sys_dllmain.cpp">
