--- a/Musa.Runtime/Musa.Runtime.VCRT.vcxproj.filters
+++ b/Musa.Runtime/Musa.Runtime.VCRT.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\std_exception.cpp">
       <Filter>crt\vcruntime</Filter>
     </ClCompile>
+    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\std_type_info.cpp">
+      <Filter>crt\vcruntime</Filter>
+    </ClCompile>
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir)\crt\vcruntime\throw.cpp">
       <Filter>crt\vcruntime</Filter>
     </ClCompile>
@@ -85,7 +88,7 @@
     <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir_Overlay)\crt\vcruntime\jbcxrval.c">
       <Filter>crt\vcruntime</Filter>
     </ClCompile>
-    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir_Overlay)\crt\vcruntime\std_type_info.cpp">
+    <ClCompile Include="$(Musa_Runtime_VC_ToolsInstallDir_Overlay)\crt\vcruntime\undname.cxx">
       <Filter>crt\vcruntime</Filter>
     </ClCompile>
   </ItemGroup>
